[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
actix = "0.13.0"
mime = "0.3.16"
mongodb = "2.2.1"
bson = "2.2.0"
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0"
rand = "0.8.5"

[dependencies.uuid]
version = "1.0.0"
features = ["v4"]


